[package]
name = "kvs"
version = "0.1.0"
authors = ["khamitov02  <khamitov02@inbox.ru>"]
edition = "2021"

[dependencies]
clap = { version = "4.5.18", features = ["derive"] }
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.128"
thiserror = "1.0.64"
[dev-dependencies]
assert_cmd = "2.0.16"
predicates = "3.1.2"
tempfile = "3.13.0"
walkdir = "2.5.0"
